Micro-service-playlist/micro-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlist
  labels:
    app: web
spec:
  selector:
    matchLabels:
      app: web
      tier: playlist
  template:
    metadata:
      labels:
        app: web
        tier: playlist
    spec:
      containers:
        - image: antonin89000/web:latest
          name: microserviceplaylist
          ports:
            - containerPort: 80
              protocol: TCP
