Micro-service-playlist/micro-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playlist
  labels:
    app: web
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: web
    tier: playlist
